# tally

./: .gitignore  README.md  analysis_options.yaml  pubspec.yaml
.github/workflows/: build-android.yml  build-macos.yml  build-release.yml  build-windows.yml  server-ci.yml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/luminous/tally/: MainActivity.kt
lib/: main.dart
lib/UI/: audit_page.dart  operation_log.dart  tally_page.dart
lib/models/: operation_log.dart  record.dart  staff.dart
lib/pages/: account_check_page.dart  add_record_page.dart  edit_record_dialog.dart  ledger_manage_page.dart  operation_log_page.dart  record_actions_widget.dart  record_filters_widget.dart  record_list_widget.dart  recycle_bin_page.dart  settings_page.dart  staff_selection_page.dart  view_records_page.dart  view_records_page_simplified.dart
lib/services/: api_service.dart  database_service.dart
lib/widgets/: custom_date_picker.dart
server/: Cargo.toml  Dockerfile  README.md  config.toml  debug_flutter_data.py  diagnose_database.py  docker-compose.yml  main.py  requirements.txt  start_python.bat  start_python.sh  test_date_fix.py  test_date_update.py  test_flutter_connection.py  test_update_record.py
server/data/: tally.db
server/src/: main.rs
test/: api_service_date_test.dart  api_test.dart  database_connection_test.dart
