[package]
name = "tally-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "mysql", "chrono", "json"] }
chrono = { version = "0.4", features = ["serde"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }

[[bin]]
name = "tally-server"
path = "src/main.rs"
